[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leetsync"
version = "0.1.0"
description = "Automatically sync accepted LeetCode solutions to GitHub."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Tarun Soni" }
]

dependencies = [
    "httpx",
    "pydantic",
    "pydantic-settings",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]